force-app/main/default/objects/Chamada__c/Chamada__c.object-meta.xml
<CustomObject>
    <label>Chamada</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chamadas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>