force-app/main/default/objects/Chamada__c/fields/Aluno__c.field-meta.xml
<CustomField>
    <fullName>Aluno__c</fullName>
    <label>Aluno</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Chamadas</relationshipLabel>
    <relationshipName>Chamadas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>