force-app/main/default/objects/Chamada__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Atestado</fullName>
            </value>
            <value>
                <fullName>Ausente</fullName>
            </value>
            <value>
                <fullName>Feriado</fullName>
            </value>
            <value>
                <fullName>Férias</fullName>
            </value>
            <value>
                <fullName>Folga</fullName>
            </value>
            <value>
                <fullName>Jogo</fullName>
            </value>
            <value>
                <fullName>Presente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>