force-app/main/default/objects/Chamada__c/fields/TotalPresenca__c.field-meta.xml
<CustomField>
    <fullName>TotalPresenca__c</fullName>
    <formula>CASE(Status__c ,

&quot;Presente&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de presença</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>