force-app/main/default/objects/Chamada__c/fields/TotalTreinosElegiveis__c.field-meta.xml
<CustomField>
    <fullName>TotalTreinosElegiveis__c</fullName>
    <formula>CASE(Status__c ,

&quot;Presente&quot;,1,
&quot;Ausente&quot;,1,
&quot;Atestado&quot;,1,
&quot;Folga&quot;,0,
&quot;Férias&quot;,0,
&quot;Jogo&quot;,0,
&quot;Feriado&quot;,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de treinos elegíveis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>