force-app/main/default/objects/Chamada__c/fields/Treinador__c.field-meta.xml
<CustomField>
    <fullName>Treinador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treinador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Treinador/Tutor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Treinador</relationshipLabel>
    <relationshipName>Treinador</relationshipName>
    <type>Lookup</type>
</CustomField>