force-app/main/default/objects/Chamada__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aluno__c</columns>
    <columns>Turma__c</columns>
    <columns>Ano__c</columns>
    <columns>Data__c</columns>
    <columns>Status__c</columns>
    <columns>TotalTreinosElegiveis__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Tudo</label>
</ListView>