force-app/main/default/objects/Chamada__c/listViews/TodasChamadas.listView-meta.xml
<ListView>
    <fullName>TodasChamadas</fullName>
    <columns>NAME</columns>
    <columns>Aluno__c</columns>
    <columns>Turma__c</columns>
    <columns>Ano__c</columns>
    <columns>Data__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as chamadas</label>
</ListView>